test/types/string/bradc/string2ints/badstring2uint64-3.good
badstring2uint64-3.chpl:3: error: Illegal character when converting from string to uint(64): 'a'
