test/types/string/bradc/string2ints/badstring2uint64-3.chpl
var s = "a1";

var x64 = s:uint(64);
writeln("x64 is: ", x64);

